# mini-linux

./: .gitignore  config.toml  pyproject.toml
pkgs/: acpi.toml
src/mini_linux/: __init__.py  config.py  fetch.py  package.py
